Changes for 4.0.4rc1

New features:
..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)
...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)

Bug fixes:
..F....... [ZBX-15307] fixed upper level maps positioning in Monitoring Map screen (talbergs)
...G...PS. [ZBX-15428] improved regular expression performance by studying compiled pattern (vso)
...G...PS. [ZBX-11761] added warnings in case of TLS identity mismatch (akozlovs)
A......... [ZBX-15373] fixed removal of trigger when deleting discovered item; fixed removal of dependent child items when removing master item (vmurzins)
A......... [ZBX-14613] fixed hostgroup.delete and host.delete API methods to validate maintenance constraint (talbergs)
..F....... [ZBX-14863] fixed authentication settings form of LDAP anonymous binding (gcalenko)
..F....... [ZBX-15374] fixed SQL and PHP errors on chart3.php page (Sasha)
...G...... [ZBX-15301] fixed monotonous lag behind in Windows "system.localtime" (MVekslers)
..F....... [ZBX-15377] fixed error messages for arrays in GET parameters (Sasha)
A......... [ZBX-15369] fixed "Undefined index: label" in map.update() method (Sasha)
..F....... [ZBX-15376] fixed "Undefined index: refresh" on several pages with disabled guest user (Sasha)
..F....... [ZBX-15375] fixed web scenario step name can consist only of whitespaces (agriscenko)
..F....... [ZBX-15375] fixed undefined index on Web scenario configuration page (Sasha)
..F....... [ZBX-15372] fixed SQL and PHP errors on "Slide shows" page when enter slides.php witout GET parameters (Sasha)
A......... [ZBX-15359] fixed undefined index in maintenance.create and maintenance.update API calls (Sasha)
A......... [ZBX-15358] fixed undefined index in configuration.import API call without one or several rules (Sasha)
A......... [ZBX-15355] fixed undefined index in configuration.import API call (Sasha)