@@ -135,10 +135,13 @@ class CCheckBox extends CInput {
 				->toString();
 		}
 
-		$elements = ($this->label_position == self::LABEL_POSITION_LEFT)
+		$elements = ($this->label_position === self::LABEL_POSITION_LEFT)
 			? [$this->label, new CSpan()]
 			: [new CSpan(), $this->label];
 
-		return $unchecked.parent::toString($destroy).((new CLabel($elements, $this->getId()))->toString(true));
+		$label = (new CLabel($elements, $this->getId()))
+			->addClass($this->label_position === self::LABEL_POSITION_LEFT ? 'label-pos-left' : null);
+
+		return $unchecked.parent::toString($destroy).($label->toString(true));
 	}
 }
