@@ -1398,6 +1398,8 @@ select {
     background-color: #fff; }
     .checkbox-radio + label span:active {
       border-color: #888; }
+  .checkbox-radio + label.label-pos-left span {
+    margin-left: 4px; }
   .checkbox-radio:focus + label span {
     border-color: #000; }
   .checkbox-radio:checked:focus + label span {
